--- a/css/detail.css
+++ b/css/detail.css
@@ -8,6 +8,7 @@ ul,
 li {
   list-style: none;
 }
+
 .row {
   max-width: 980px;
   margin: 0 auto;
@@ -54,7 +55,7 @@ li {
   transition: 0.5s;
 }
 .title_coupon {
-  font-size: 15px;
+  font-size: 13px;
   display: flex;
   justify-content: space-between;
   border: 1px solid #757575;
@@ -63,6 +64,22 @@ li {
   padding: 0 15px;
   margin-bottom: 15px;
   border-radius: 10px;
+  align-items: center;
+}
+.title_coupon .coupon1 {
+  border: 1px solid #000;
+  box-sizing: border-box;
+  height: 30px;
+  line-height: 30px;
+  font-size: 12px;
+  width: 80px;
+  text-align: center;
+  cursor: pointer;
+}
+.title_coupon .coupon1:hover {
+  background-color: blueviolet;
+  color: #fff;
+  transition: 0.5s;
 }
 .title_coupon .accent_red {
   color: red;
@@ -79,16 +96,43 @@ li {
   margin-bottom: 10px;
 }
 .title_daybox {
-  border: 1px solid #000;
+  border: 1px solid #f0f0f0;
+  margin-bottom: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 5px 5px #f0f0f0;
+}
+.dday {
+  width: 180px;
+  text-align: center;
+}
+.ddday {
+  width: 250px;
+}
+.dayday1 {
+  line-height: 100px;
+  font-weight: bold;
+}
+.dayday2 {
+  line-height: 100px;
+  text-align: center;
+  font-size: 11px;
 }
 .title_daybox .dayday {
   display: flex;
-  justify-content: space-between;
   height: 100px;
+  justify-content: space-between;
+}
+.ddday .gauge {
+  font-size: 13px;
+}
+.ddday span {
+  display: inline-block;
 }
 .title_daybox .dayinfo {
-  font-size: 12px;
+  border-top: 1px solid #f0f0f0;
+  font-size: 11px;
   line-height: 30px;
+  text-align: center;
 }
 
 /* 목록 */
@@ -101,6 +145,59 @@ li {
   padding-left: 10px;
   margin-bottom: 10px;
 }
+.title_name .accent {
+  color: blueviolet;
+}
 .title_name:last-child {
   border-bottom: 1px solid #f0f0f0;
+}
+
+.banner {
+  position: relative;
+  text-align: center;
+}
+.banner img {
+  width: 400px;
+}
+
+.tab {
+  display: flex;
+  color: #fff;
+  background-color: #333333;
+  margin: 50px 0 10px 0;
+  height: 80px;
+  align-items: center;
+  font-size: 20px;
+  justify-content: center;
+}
+.tab span {
+  padding: 0px 30px;
+}
+
+.detail_photo img {
+  width: 980px;
+}
+.btn {
+  display: flex;
+  justify-content: space-between;
+}
+.btn button {
+  border-radius: 10px;
+}
+.btn .cart {
+  background-color: #fff;
+  border: 1px solid #000;
+  width: 210px;
+  height: 45px;
+  font-size: 22px;
+  font-weight: bold;
+}
+.btn .buy {
+  background-color: #e63740;
+  border: 1px solid #000;
+  width: 210px;
+  height: 45px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
 }
