--- a/css/hf.css
+++ b/css/hf.css
@@ -7,6 +7,9 @@ a {
   text-decoration: none;
   color: inherit;
 }
+input:focus {
+  outline: none;
+}
 /* header */
 .wrap_head {
   background-color: #fff;
