--- a/css/store.css
+++ b/css/store.css
@@ -8,9 +8,7 @@ a {
   color: inherit;
 }
 /* input 클릭시 안에 테두리 제거 */
-input:focus {
-  outline: none;
-}
+
 b {
   font-weight: bold;
 }
@@ -25,42 +23,52 @@ body {
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
+
+ul li {
+  list-style: none;
+}
+
 /* 페이지 크기 */
 #wrap_store {
   background-color: #fff;
   max-width: 980px;
   margin: 0 auto;
 }
-/* 후버했을때 이미지  */
-.wrap_good img,
-.wrap_list img {
+
+.item_img {
   position: relative;
-  transition: all 0.5s;
+  overflow: hidden;
 }
-/* 이미지 뒤에 내용 숨기기 */
-.wrap_good .back,
-.wrap_list .back {
+/* 아이콘 및 배경 투명 및 불투명 */
+.item_img .back {
   position: absolute;
-  background: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 100%;
-  display: flex;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   color: #fff;
-  font-size: 30px;
+  font-size: 40px;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
   align-items: center;
   justify-content: center;
   opacity: 0;
+  transition: all 0.5s;
 }
-/* 후버헀을때 .back 내용 보여주기 */
-.wrap_good .back:hover,
-.wrap_list .back:hover {
-  opacity: 1;
-  transition: 0.5s;
-}
-.wrap_good .back a,
-.wrap_list .back a {
+.item_img .back a {
   margin: 0 10px;
 }
+.item_img .back .fa-search:hover {
+  color: #e63740;
+}
+.item_img .back .fa-cart-shopping:hover {
+  color: #e63740;
+}
+/* 후버했을때 보여지기 */
+.item_img .back:hover {
+  opacity: 1;
+}
+
 /* 리그오브레전드 로고 */
 #riot-store {
   position: absolute;
@@ -118,7 +126,7 @@ body {
 .wrap_good .title1_h2 {
   background-image: url(../images/tit_special_goods.png);
   text-align: center;
-  width: 100%;
+  /* width: 100%; */
   height: 68px;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -126,15 +134,21 @@ body {
 
 /* 옵션 new  */
 .wrap_good_items {
-  position: relative;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 7px 6px 0 6px;
+}
+
+/* 스페셜상품 3개 리스트 크기 */
+.wrap_item {
   display: flex;
   justify-content: space-between;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  flex-wrap: wrap;
 }
-/* 스페셜상품 3개 리스트 크기 */
-.wrap_good_items > div {
-  width: 32.5%;
-  padding: 7px 6px;
+.wrap_item li {
+  margin: 10px 0;
+}
+.wrap_item > li {
+  width: 23.5%;
 }
 /* NEW 박스 */
 .wrap_good_items .box_item .option {
@@ -166,28 +180,9 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 /* 이미지 크기 */
-.wrap_good_items .item1_img,
-.item2_img,
-.item3_img {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  position: relative;
-  padding-bottom: 78.86%;
+.wrap_good_items .item_img img {
   width: 100%;
-  overflow: hidden;
 }
-/* 각 상품 이미지 */
-.wrap_good_items .wrap_item1 .item1_img {
-  background-image: url(../images/838ac621820809ecd038a1af10cb50bce41c3e02.jpg);
-}
-.wrap_good_items .wrap_item2 .item2_img {
-  background-image: url(../images/c955e456f5ebb3f2967bccaa2443e8862cb1e2c4.jpg);
-}
-.wrap_good_items .wrap_item3 .item3_img {
-  background-image: url(../images/fd10b93ea2da5cdd455cbed3bfba42358416c0bc.jpg);
-}
-
 /* wrap_list 신상품 */
 .wrap_good_list {
   position: relative;
