--- a/css/store.css
+++ b/css/store.css
@@ -22,7 +22,7 @@ h2 {
 }
 /* body 배경화면 */
 body {
-  background-image: url(../images/i8268737542.jpg);
+  background-image: url(../images/HEADER/body_background.jpg);
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
