--- a/css/hf.css
+++ b/css/hf.css
@@ -3,9 +3,18 @@
   padding: 0;
   margin: 0;
 }
+.row {
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
 a {
   text-decoration: none;
   color: inherit;
+}
+ul,
+li {
+  list-style: none;
 }
 input:focus {
   outline: none;
